kubernetes/Nginx-ingress/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mbadady-me
  namespace: nginx-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - portfolio.mbadady.me
    - sockapp.mbadady.me
    - prometheus.mabadady.me
    - grafana.mbadady.me
    secretName: echo-tls
  rules:
  - host: portfolio.mbadady.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: 
            name: portfolio-service
            port: 
              number: 80
  - host: sockapp.mbadady.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front-end
            port:
              number: 80
  - host: prometheus.mabadady.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
             name: prometheus
             port: 
              number: 80
  - host: grafana.mbadady.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
             name: grafana
             port: 
              number: 80
